MInor fix to comapct headers